// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/Tag Avec Icon 1`] = `
<div
  className="flex"
>
  <div
    className="flex items-center px-3 py-0.5 text-white bg-bf500  rounded-full pr-2"
  >
    <span
      className="py-0.5 text-sm"
    >
      Yolo
    </span>
    <div
      className="ml-1 rounded-full cursor-pointer"
      onClick={[Function]}
    >
      <div
        className="fr-fi-close-line flex m-auto scale-75"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/shared/Tag Cree Par Utilisateur 1`] = `
<div
  className="flex"
>
  <div
    className="flex items-center px-3 py-0.5 text-white bg-bf500  rounded-full !bg-white !border !border-gray-300 !text-gray-900"
  >
    <span
      className="py-0.5 text-sm"
    >
      Yolo
    </span>
  </div>
</div>
`;

exports[`Storyshots ui/shared/Tag Default 1`] = `
<div
  className="flex"
>
  <div
    className="flex items-center px-3 py-0.5 text-white bg-bf500  rounded-full"
  >
    <span
      className="py-0.5 text-sm"
    >
      Yolo
    </span>
  </div>
</div>
`;
